// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          
          <div
            class="css-n29l73"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                type="text"
                value="ARK Devnet"
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="css-6y29t8"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-1dwg83m"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-check-mark.svg
          </svg>
        </div>
        <span>
          Success
        </span>
      </div>
      <div
        class="css-k5jr4t"
      >
        Successfully connected
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on connection fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          
          <div
            class="css-n29l73"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                type="text"
                value="ARK Devnet"
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="css-6y29t8"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-ic0qlc"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
        <span>
          Error
        </span>
      </div>
      <div
        class="css-6o9bco"
      >
        Unable to connect to Ledger device. Please ensure that all other applications that connect to your Ledger are closed.
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should render cancel screen 1`] = `
<div>
  <div
    class="space-y-8"
    data-testid="LedgerCancellingScreen"
  >
    <svg
      class="mx-auto max-w-full"
    >
      error-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="animate-pulse font-semibold text-theme-secondary-text"
      >
        Cancelling Ledger Import, please wait...
      </span>
    </div>
  </div>
</div>
`;

exports[`LedgerConnectionStep should show update error if app version is less than minimum version 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          
          <div
            class="css-n29l73"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                type="text"
                value="ARK Devnet"
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="css-6y29t8"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-ic0qlc"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
        <span>
          Error
        </span>
      </div>
      <div
        class="css-6o9bco"
      >
        The ARK app version is 1.0.1. Please update the ARK app via Ledger Live.
      </div>
    </div>
  </section>
</div>
`;
